crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-standard-library-import_exempt_type_checking_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Make standard library import `typing.Final` lazy
 --> exempt_type_checking_1.py:5:20
  |
3 | from __future__ import annotations
4 |
5 | from typing import Final
  |                    ^^^^^
6 |
7 | Const: Final[dict] = {}
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
4 |
  - from typing import Final
5 + lazy from typing import Final
6 |
  |
note: This is an unsafe fix and may change runtime behavior
