crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-standard-library-import_init_var.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Make standard library import `pathlib.Path` lazy
 --> init_var.py:6:21
  |
5 | from dataclasses import FrozenInstanceError, InitVar, dataclass
6 | from pathlib import Path
  |                     ^^^^
help: Convert to a lazy import (or move into a type-checking block)
  |
5 | from dataclasses import FrozenInstanceError, InitVar, dataclass
  - from pathlib import Path
6 + lazy from pathlib import Path
7 |
  |
note: This is an unsafe fix and may change runtime behavior
