crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-standard-library-import_runtime_evaluated_base_classes_3.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Make standard library import `uuid.UUID` lazy
 --> runtime_evaluated_base_classes_3.py:5:18
  |
3 | import datetime
4 | import pathlib
5 | from uuid import UUID  # TC003
  |                  ^^^^
6 |
7 | import pydantic
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
4 | import pathlib
  - from uuid import UUID  # TC003
5 + lazy from uuid import UUID  # TC003
6 |
  |
note: This is an unsafe fix and may change runtime behavior
