crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-third-party-import_runtime_evaluated_base_classes_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Make third-party import `geopandas` lazy
 --> runtime_evaluated_base_classes_2.py:3:21
  |
1 | from __future__ import annotations
2 |
3 | import geopandas as gpd  # TC002
  |                     ^^^
4 | import pydantic
5 | import pyproj  # TC002
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
2 |
  - import geopandas as gpd  # TC002
3 + lazy import geopandas as gpd  # TC002
4 | import pydantic
  |
note: This is an unsafe fix and may change runtime behavior

TC002 [*] Make third-party import `pyproj` lazy
 --> runtime_evaluated_base_classes_2.py:5:8
  |
3 | import geopandas as gpd  # TC002
4 | import pydantic
5 | import pyproj  # TC002
  |        ^^^^^^
6 | from pydantic import BaseModel
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
4 | import pydantic
  - import pyproj  # TC002
5 + lazy import pyproj  # TC002
6 | from pydantic import BaseModel
  |
note: This is an unsafe fix and may change runtime behavior
